[package]
name = "wt-api"
description = "Basic api for war thunder. Supporting vehicle related stuff."
repository = "https://github.com/X-rays5/wt-api"
license-file = "LICENSE"
version = "1.0.0"
authors = ["X-rays5 <thomas@scheenen.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.12"
serde = "1.0.136"
serde_json = "1.0.79"
scraper = "0.14.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "s"